Made changes to my flex on navigations.less. Went over @media queries however still having issues with it showing on my site. It shows on index.css but its not showing when the viewport is set to 500px

--- a/css/index.css
+++ b/css/index.css
@@ -179,30 +179,35 @@ img {
   width: 100%;
   margin: 0 auto;
 }
-@media (max-width: 500) {
-  .container {
-    max-width: 500px;
-    width: 100%;
-  }
-}
-nav {
-  display: flex;
-  align-items: center;
-  margin-bottom: 15px;
-}
-@media (max-width: 500) {
+@media (max-width:500) {
   nav {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
 }
-nav h1 {
-  padding: 20px 30% 0 0;
+header {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px;
+}
+header h1 {
+  width: 50%;
+}
+@media (max-width: 500) {
+  header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 45%;
 }
 nav a {
-  padding: 10px 0 0 6.5%;
-  margin: 0 0% 0 0%;
   font-size: 1.5rem;
   text-decoration: none;
   color: black;
