--- a/less/global.less
+++ b/less/global.less
@@ -48,8 +48,13 @@ img {
     max-width: 800px;
     width: 100%;
     margin: 0 auto;
-    @media @mobile {
-        max-width: 500px;
-        width: 100%;
-    }
+
 }
+
+@media @mobile {
+    nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        }
+    }
